--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -1,17 +1,41 @@
-* {
-  box-sizing: border-box;
+.base-col-height {
+  height: 800px;
+  overflow: scroll;
 }
 
-body {
-  background-color: yellow
+.column-header-lists{
+  position: absolute;
+  height: 48px;
+  width: 16.6%;
+  text-align: center;
+  box-shadow: 0px 10px 5px #888888
+}
+.column-header-lists,
+.column-header-lists>h3{
+  z-index: 10;
+}
+.column-header-lists>h3{
+  margin: 0;
 }
 
-#content {
- width: 480px;
- margin: 0 auto;
+.notes-list{
+  margin-top: 80px;
 }
 
-.editor {
- border: 1px solid grey;
- padding: 6px;
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 48px;
+  z-index: 10;
+  background: #eeeeee;
+  -webkit-box-shadow: 0 7px 8px rgba(0, 0, 0, 0.12);
+  -moz-box-shadow: 0 7px 8px rgba(0, 0, 0, 0.12);
+  box-shadow: 0 7px 8px rgba(0, 0, 0, 0.12);
+}
+
+.header__content-text {
+  text-align: center;
+  padding: 15px 20px;
 }
