--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -6,7 +6,7 @@
 .column-header-lists{
   position: absolute;
   height: 48px;
-  width: 16.6%;
+  width: auto;
   text-align: center;
   box-shadow: 0px 10px 5px #888888
 }
