(feat)Chat scroll works properly using jQuery
Look into smoothing transition later on.

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -14,7 +14,7 @@
   margin: 0;
 }
 
-.chat-messages-display{
+#chat-messages-display{
   padding: 0 1em 0 1em;
   max-height: 350px;
   overflow-y: scroll;
