--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -8,6 +8,11 @@
   overflow: auto;
 }
 
+.base-col-height2 {
+  min-height: 700px;
+  overflow: auto;
+}
+
 .chat-client-container{
   max-height: 565px;
   overflow: hidden;
@@ -79,10 +84,6 @@
 }
 .sketch {
   position: relative;
-}
-
-.paint {
-  outline: 2px solid gray;
 }
 
 #tmpCanvas {
