--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -1,8 +1,3 @@
-/*body {
-  background: grey;
-  margin: 0 auto;
-}*/
-
 .base-col-height {
   min-height: 800px;
   overflow: auto;
@@ -57,6 +52,40 @@
   margin: 0;
 }
 
+.left-panel {
+  height: 100%;
+  display: block;
+  position: relative;
+  left: 0px;
+}
+
+.center-panel {
+  position: relative;
+  float: left;
+  display: inline-block;
+  margin: 10px;
+  padding: 900px;
+  border: 3px solid #e6e600;
+}
+
+.right-panel {
+  position: relative;
+}
+.notes-list{
+  position: relative;
+  margin-top: 25%;
+}
+
+.h7 {
+  color: white;
+  border: red;
+  position: absolute;
+  padding-top: 5%;
+  padding-bottom: 0px;
+  width: 100%;
+  margin-bottom: 0;
+}
+
 .header {
   position: fixed;
   top: 0;
@@ -75,9 +104,6 @@
   padding: 15px 20px;
 }
 
-.session-container {
-  border: 3px solid #e6e600;
-}
 .sketch {
   position: relative;
 }
@@ -111,7 +137,6 @@
   position: relative;
 }
 
-
 section {
   text-align: center;
 }
@@ -140,4 +165,25 @@ section .parallax {
   background-image: url("./styles/images/frontpage1.jpg");
   width: 853em ;
   height: 480em;
+}
+
+.search-container {
+  position: relative;
+  margin-top: 40px;
+  margin-bottom: 5px;
+}
+
+.search-input {
+  position: absolute;
+  background: url("../icon-search.png") no-repeat 1px;
+  background-size: 30px 30px;
+  margin: 0px;
+}
+
+.search-input:focus {
+  background: none;
+}
+
+.active-search {
+  background: none;
 }
