--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -65,12 +65,12 @@
   display: inline-block;
   margin: 10px;
   padding: 900px;
-  border: 3px solid #e6e600;
 }
 
 .right-panel {
   position: relative;
 }
+
 .notes-list{
   position: relative;
   margin-top: 25%;
@@ -187,3 +187,17 @@ section .parallax {
 .active-search {
   background: none;
 }
+
+.dashboard-fab li a {
+  font-size: 10px;
+  color: black; 
+  font-weight: bold;
+}
+
+.dashboard-fab li a:active {
+  font-size: 10px;
+  color: black; 
+  font-weight: bold;
+
+}
+
