--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -198,6 +198,9 @@ section .parallax {
   font-size: 10px;
   color: black; 
   font-weight: bold;
+}
 
+.search-input {
+  margin-bottom: 25px;
 }
 
