--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -141,12 +141,6 @@ section {
   text-align: center;
 }
     
-    /* .react-simple-parallax-bg is generate by the component */
-section .react-simple-parallax-bg {
-  background-image: url('./images/frontpage1.jpg');
-  height: 750px;
-}
-    
 section .parallax {
   top: 200px;
   margin: auto;
@@ -159,12 +153,6 @@ section .parallax {
 
 .jobdesc {
   line-height: 5em;
-}
-
-.landingpage-image {
-  background-image: url("./styles/images/frontpage1.jpg");
-  width: 853em ;
-  height: 480em;
 }
 
 .search-container {
@@ -224,7 +212,7 @@ section .parallax {
 
 .topContainer {
   height: 500px;
-  background-image: url('./images/frontpage2.jpg');
+  background-image: url('./images/frontpage1.jpg');
   background-size: 100%;
 }
 
@@ -232,4 +220,12 @@ section .parallax {
   margin: auto;
   width: 50%;
   padding: 10px;
+}
+
+h1 {
+  font-size: 200px;
+}
+
+h1, h3 {
+  color: white;
 }
