Fix canvas border

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -164,7 +164,7 @@ section .parallax {
 .search-input {
   margin-bottom: 25px;
 }
-.sketch {
+.paint {
   border: 2px solid grey;
 }
 .innerContainer {
